<resources>
    <string name="app_name">DepTrackApp</string>
    <string name="google_android_map_api_key">AIzaSyCcmGsUb8T5-Si1fmzUMiPKVaYCDKehMNk</string>
    <string name="calendar_button">Kalender</string>
    <string name="graph_button">Verlauf</string>
    <string name="sensitivies_button">Befindlichkeiten</string>
    <string name="activities_button">Aktivitäten</string>
    <string name="map_button">Kartenansicht</string>
    <string name="places_button">Orte tracken</string>
    <string name="next">Weiter</string>
    <string name="save_button">Speichern</string>
    <string name="end_button">Abschließen</string>
    <string name="input_button">Zur Eingabe</string>
    <string name="close_button">Schließen</string>
    <string name="ok_button">Ok</string>
    <string name="delete_button">Gespeicherte Eingaben löschen</string>
    <string name="send_button">Senden</string>
    <string name="sendEmail_button">Per E-Mail versenden</string>
    <string name="totalScore">Wie geht es dir?</string>
    <string name="score_textview">Wähle die Stärke!</string>
    <string name="score_no_symptoms">Für detailreichere Eingaben speichere deine Hauptsymptome in den Einstellungen.</string>
    <string name="overview_textview">Übersichten</string>
    <string name="entries_textview">Zusätzliche Eingaben</string>
    <string name="activities_social_textview">Soziale Aktivitäten</string>
    <string name="activities_sport_textview">Sportliche Aktivitäten</string>
    <string name="activities_relaxation_textview">Entspannungsverfahren</string>
    <string name="activities_obligations_textview">Verpflichtungen</string>
    <string name="activitiesInput_textview">Weitere Eingaben</string>
    <string name="gps_activation_textview">GPS-Tracking</string>
    <string name="push_activation_textview">Push-Benachrichtigungen</string>
    <string name="main_symptoms">Hauptsymptome ändern</string>
    <string name="recipient_mail_textview">Standard als E-Mail-Empfänger anlegen</string>
    <string name="privacyPolicy_textview">Datenschutzerklärung</string>
    <string name="siteNotice">Impressum</string>
    <string name="input_call_textview">Gib bis zu 3 Hauptsymptome ein:</string>
    <string name="calendar_daily_morning_textview">Morgen</string>
    <string name="calendar_daily_midday_textview">Mittag</string>
    <string name="calendar_daily_evening_textview">Abend</string>
    <string name="separation">__  __  __  __  __  __  __  __  __  __  __  __  __</string>
    <string name="movementProfile_textview">Bewegungsprofil</string>
    <string name="places_textview">Gib die Orte zu deinen Aktivitäten ein:</string>
    <string name="no_Data_textview"><i>Keine Daten vorhanden.</i></string>
    <string name="today">Heute</string>
    <string name="yesterday">Gestern</string>
    <string name="average">Durchschnittlicher Score:</string>
    <string name="noEntry">Keine Eingaben</string>
    <string name="home_activity_label">Home</string>
    <string name="calendar_activity_daily_label">Kalender - Tagesansicht</string>
    <string name="calendar_activity_weekly_label">Kalender - Wochenansicht</string>
    <string name="activities_activity_label">Aktivitäten eingeben</string>
    <string name="graph_activity_label">Verlauf</string>
    <string name="map_activity_label">Kartenansicht</string>
    <string name="places_activity_label">Orte tracken</string>
    <string name="sensitivities_activity_label">Befindlichkeiten eingeben</string>
    <string name="settings_activity_label">Einstellungen</string>
    <string name="emergency_activity_label">Notrufnummern</string>
    <string name="score_activity_label">Scores eingeben</string>
    <string name="privacy_policy_label">Datenschutzerklärung</string>
    <string name="places_edittext">Ort eingeben</string>
    <string name="sensibilities_edittext">Befindlichkeit eingeben</string>
    <string name="activities_edittext">Aktivität eingeben</string>
    <string name="mail_edittext">Gib eine E-Mail-Adresse ein</string>
    <string name="main_symptoms_edittext">Symptom eingeben</string>
    <string name="emergency1"><b>In Notfällen:</b></string>
    <string name="emergency2">Feuerwehr/Rettungsdienst: 112</string>
    <string name="emergency3">Polizei: 110</string>
    <string name="emergency4"><b>Wenn du jemanden zum Reden brauchst:</b></string>
    <string name="emergency5"><u>Telefonseelsorge</u></string>
    <string name="emergency6">0800/111 0 111 oder 116 123  <i>(kostenlos, 24h)</i></string>
    <string name="emergency7"><u>Info-Telefon Depression</u></string>
    <string name="emergency8">0800 3344533 <i>(kostenlos, Mo, Di, Do: 13:00 – 17:00 Uhr und Mi, Fr: 08:30 – 12:30 Uhr)</i></string>
    <string name="privacy_policy_header">Datenschutzerklärung</string>
    <string name="privacy_policy_caption">Informationen zur Datenverarbeitung</string>
    <string name="privacy_policy_text">Die Eingabe personenbezogener Daten erfolgt stets auf freiwilliger Basis. Ihre bei Nutzung der App eingegebenen Daten werden ausschließlich lokal auf Ihrem Endgerät gespeichert. Der Upload zu einem Server wird aus datenschutzrechtlichen Gründen und zum Schutz Ihrer sensiblen Daten und Ihrer Privatsphäre nicht erfolgen. Die Daten werden zur Anzeige der Übersichten lokal ausgelesen und angezeigt. Eine Weitergabe Ihrer Daten an Dritte erfolgt lediglich, bei fakultativen Option des Versendens der eigenen Daten eines gewissen Zeitraums. Die Datenübertagung via E-Mail kann Sicherheitslücken seitens der Betreiber aufweisen. Die App speichert in geöffnetem oder minimierten Zustand die GPS-Position des Smartphones. Diese wird zur Auswertung des Bewegungsprofils benötigt. In den Einstellungen der Anwendung oder durch Abschaltung der GPS-Funktion auf Ihrem Endgerät kann dieses Feature deaktiviert werden.</string>
    <string name="privacy_policy_caption_maps">Google Maps</string>
    <string name="privacy_policy_text_maps">Zur Darstellung des Bewegungsprofils wird Google Maps verwendet Es handelt sich hierbei um einen Dienst der Google LLC, 1600 Amphitheatre Parkway, Mountain View, CA 94043 USA, nachfolgend nur „Google“ genannt. Durch die Zertifizierung nach dem EU-US-Datenschutzschild („EU-US Privacy Shield“) garantiert Google, dass die Datenschutzvorgaben der EU auch bei der Verarbeitung von Daten in den USA eingehalten werden. Um die Darstellung bestimmter Schriften in unserem Internetauftritt zu ermöglichen, wird bei Aufruf unseres Internetauftritts eine Verbindung zu dem Google-Server in den USA aufgebaut. Sofern Sie die in unseren Internetauftritt eingebundene Komponente Google Maps aufrufen, speichert Google über Ihren Internet-Browser ein Cookie auf Ihrem Endgerät. Um Ihren Standort anzuzeigen werden Ihre Nutzereinstellungen und -daten verarbeitet. Hierbei können wir nicht ausschließen, dass Google Server in den USA einsetzt. Zudem erfolgt die Nutzung von Google Maps sowie der über Google Maps erlangten Informationen nach den Google-Nutzungsbedingungen <i>https://policies.google.com/</i></string>
    <string name="site_notice_header">Impressum</string>
    <string name="site_notice_caption1">Informationen über den Anbieter</string>
    <string name="site_notice_contact_name">Sabine Roth</string>
    <string name="site_notice_contact_address">Wöhrdstraße 46, 93059 Regensburg</string>
    <string name="site_notice_contact_mail">E-Mail: roth_sabine@outlook.de</string>
    <string name="site_notice_caption2">Haftung für Inhalte</string>
    <string name="site_notice_text">Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte wird keine Haftung übernommen. Nach §§ 8 bis 10 TMG ist der Dienstanbieter nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Das Verwenden oder Verbreiten der appeigenen Icons und Bilder ist untersagt.</string>
    <string name="notification_part1">Dein letzter Eintrag ist vom</string>
    <string name="notification_part2">. Aktualisiere deine Eingaben.</string>
    <string name="toast_end">gespeichert.</string>
    <string name="toast">Gespeichert</string>
    <string name="notification_no_entry">Erstelle deinen ersten Eintrag</string>
    <string name="no_entry_selected">Gib eine Aktivität ein oder wähle aus der Liste.</string>
    <string name="missing_entry_score">Bitte alle Eingaben tätigen</string>
    <string name="toast_deleted">Gelöscht</string>
    <string name="toast_sent">E-Mail gesendet</string>
    <string name="toast_sent_error">Kein E-Mail client installiert</string>
    <string name="toast_noRecipient">Kein Empfänger eingegeben</string>
    <string name="toast_noValideAddress">Keine gültige E-Mail-Adresse</string>
    <string name="toast_noClient">Kein E-Mail-Client verfügbar</string>
    <string name="toast_chooseClient">Wähle einen E-Mail-Client:</string>
    <string name="mail_subject">E-Mail-Wochenreport</string>
    <string name="spinner_overview">Übersicht</string>
    <string name="graph_activities">Aktivitäten</string>
    <string name="graph_sameGraph">Übersichts- und Aktivitätengraph sind identisch</string>
    <string name="morning">Morgen</string>
    <string name="midday">Mittag</string>
    <string name="evening">Abend</string>
    <string name="pop_up_mail">Gib einen Standard-E-Mail-Empfänger für das manuelle Versenden der Graphen ein:</string>
    <string name="pop_up_start_part1">Es ist</string>
    <string name="pop_up_start_part2">Uhr. Gib deine Befindlichkeit und deine Aktivitäten von heute</string>
    <string name="pop_up_start_part3">ein!</string>
    <string name="pop_up_mail_already_entry">Aktuell:</string>
    <string name="pop_up_restart">Zum Deaktivieren der GPS-Aufzeichnung bitte die App neu starten.</string>
    <string name="pop_up_send_Standard">An Standard-Empfänger senden</string>
    <string name="pop_up_send_Alternative">Oder Empfänger eingeben:</string>
    <string name="pop_up_send_AlternativeNoStandard">Empfänger eingeben:</string>
    <string name="pop_up_send_hint">In den Einstellungen kann ein Standard-Empfänger festgelegt werden!</string>
    <string name="key_score">Gesamtscore</string>
    <string name="key_date">date</string>
    <string name="key_selectedActivities">selectedActivities</string>
    <string name="key_sensitivitiesString">sensitivitiesString</string>
    <string name="key_myNotifications">My Notifications</string>
    <string name="key_location">location.dat</string>
    <string name="key_popUpStart">popUpStart</string>
    <string name="key_popUpMainSymptoms">popUpMainSymptoms</string>
    <string name="key_popUpMail">popUpMail</string>
    <string name="key_mailRecipient">mailRecipient</string>
    <string name="key_mainSymptoms">mainSymptoms</string>
    <string name="key_tracking_settings">tracking</string>
    <string name="key_push_notification">push</string>
    <string name="key_activated">activated</string>
    <string name="key_deactivated">deactivated</string>
    <string name="key_intentSource">intentSource</string>
    <string name="key_home_value">home</string>
    <string name="key_popUp_value">popUp</string>
    <string name="key_calendar_value">calendar</string>
    <string name="key_emergency">emergency</string>
    <string name="key_site_notice">siteNotice</string>
    <string name="key_privacy_policy">privacyPolicy</string>
    <string name="key_called_activity">calledActivity</string>
    <string name="key_spinner_graph">spinnerGraph</string>
</resources>