<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emergency1"
        android:textSize="37sp"
        android:textColor="@color/colorText"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emergency2"
        android:textSize="27sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emergency3"
        android:textSize="27sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emergency4"
        android:textSize="35sp"
        android:textColor="@color/colorText"
        android:layout_marginTop="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emergency5"
        android:textSize="27sp"
        android:textColor="@color/colorText"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emergency6"
        android:textSize="25sp"
        android:textColor="@color/colorText"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emergency7"
        android:textSize="27sp"
        android:textColor="@color/colorText"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emergency8"
        android:textSize="25sp"
        android:textColor="@color/colorText"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>


</LinearLayout>