<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:gravity="center_horizontal">

        <!--
        <include
            layout="@layout/app_bar"
        />
        -->

        <!--TODO: Textsize variabel!-->
        <!--TODO: Werte in values!-->
        <!--TODO: Buttonbreite je nach Inhaltsgröße: wrap content und margin entfernen-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="36sp"
                android:layout_gravity="center_vertical"/>

            <ImageButton
                android:id="@+id/settings_imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/settings_icon"
                android:layout_marginStart="30dp"
                android:background="@null"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview_textview"
            android:visibility="visible"
            android:textSize="32sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorHeadings"
        />

        <Button
            android:id="@+id/button_overview_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar_button"
            android:visibility="visible"
            android:textSize="25sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:drawableEnd="@mipmap/calendar_icon"
            android:drawablePadding="15sp"
        />


        <Button
           android:id="@+id/button_overview_graph"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/graph_button"
           android:textSize="25sp"
           android:layout_marginLeft="50dp"
           android:layout_marginRight="50dp"
           android:layout_marginBottom="5dp"
           android:drawableEnd="@mipmap/graph_icon"
           android:drawablePadding="15sp"
        />


        <Button
            android:id="@+id/button_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_button"
            android:textSize="25sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:drawableEnd="@mipmap/maps_icon"
            android:drawablePadding="15sp"/>


        <TextView
            android:id="@+id/textView_entries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entries_textview"
            android:textSize="32sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorHeadings"
        />


        <Button
            android:id="@+id/button_sensitivies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensitivies_button"
            android:textSize="25sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:drawableEnd="@mipmap/sensitivities_icon"
            android:drawablePadding="15sp"
        />


        <Button
            android:id="@+id/button_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activities_button"
            android:textSize="25sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:drawableEnd="@mipmap/activities_icon"
            android:drawablePadding="15sp"
        />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_emergency"
            app:srcCompat="@mipmap/emergency_icon"
            android:background="@null"
            android:contentDescription="@string/emergency_activity_label"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            />


    </LinearLayout>
</ScrollView>