<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:id="@+id/TextView_GPSActivation"
            android:text="@string/gps_activation_textview"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>

        <Switch
            android:id="@+id/switch_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:id="@+id/TextView_pushActivation"
            android:text="@string/push_activation_textview"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>

        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_push"
            android:layout_gravity="center"
            android:layout_weight="0.1"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextView_recipientMail"
        android:text="@string/recipient_mail_textview"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextView_privacyPolicy"
        android:text="@string/privacyPolicy_textview"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextView_siteNotice"
        android:text="@string/siteNotice"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>

</LinearLayout>