<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_calendar_graph"/>

        <TextView
            android:id="@+id/textView_calendar_daily_morning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar_daily_morning_textview"
            style="@style/headerTextView"
            android:textStyle="bold"
            />

        <com.bachelorarbeit.bachelorarbeit.NonScrollListView
            android:id="@+id/listView_calendar_daily_morning_sensivities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listViewCalendar"


             />
        <com.bachelorarbeit.bachelorarbeit.NonScrollListView
            android:id="@+id/listView_calendar_daily_morning_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listViewCalendar"
            />
        <com.bachelorarbeit.bachelorarbeit.NonScrollListView
            android:id="@+id/listView_calendar_daily_morning_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listViewCalendar"
            />

        <TextView
            android:id="@+id/textView_calendar_daily_midday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar_daily_midday_textview"
            style="@style/headerTextView"
            android:textStyle="bold"
            />

        <com.bachelorarbeit.bachelorarbeit.NonScrollListView
            android:id="@+id/listView_calendar_daily_midday_sensivities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listViewCalendar"
            />

        <com.bachelorarbeit.bachelorarbeit.NonScrollListView
            android:id="@+id/listView_calendar_daily_midday_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listViewCalendar"
            />

        <com.bachelorarbeit.bachelorarbeit.NonScrollListView
            android:id="@+id/listView_calendar_daily_midday_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listViewCalendar"
            />


        <TextView
            android:id="@+id/textView_calendar_daily_evening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar_daily_evening_textview"
            style="@style/headerTextView"
            android:textStyle="bold"
            />

        <com.bachelorarbeit.bachelorarbeit.NonScrollListView
            android:id="@+id/listView_calendar_daily_evening_sensivities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listViewCalendar"
            />
        <com.bachelorarbeit.bachelorarbeit.NonScrollListView
            android:id="@+id/listView_calendar_daily_evening_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listViewCalendar"
            />
        <com.bachelorarbeit.bachelorarbeit.NonScrollListView
            android:id="@+id/listView_calendar_daily_evening_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/listViewCalendar"
            />


    </LinearLayout>
</ScrollView>